--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -917,7 +917,7 @@ en:
       item2: "<b>Report</b>. Post comments for each task. Attach files. Ask for feedback."
       item3: "<b>Follow</b>. Receive notifications for tasks related to you."
       item4: "<b>Review</b>. A completed task is not deleted, so you can later access its messages and files."
-      footer1: "Tasks are a simple and agile way to <b>get things done</b> and let others now."
+      footer1: "Tasks are a simple and agile way to <b>get things done</b> and let others know."
       footer2: "It's time to forget about Excel planning sheets and complex Gantt charts!"
     overview_box:
       this_list: "This task list"
