--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -549,12 +549,17 @@ en:
     projects:
       title: "'%{name}' organization"
       new_project: New project
-      active_projects: Active projects
-      archived_projects: Archived projects
-      role: "you're an <strong>%{role}</strong>"
-      last_activity: "last activity at %{date}"
       instructions: "These are the projects for this organization. If you're an admin, you can transfer a project to <a href='%{organizations_link}'>other organizations</a> by opening the project's settings."
+    active_projects:
+      title: Active projects
+      role: "you're an <strong>%{role}</strong>"
       settings: settings
+      no_active_projects: There are no active projects in this organization.
+      dont_belong: You're not part of this project
+    archived_projects:
+      title: Archived projects
+      last_activity: "last activity at %{date}"
+        
     you_are_not_admin: You are not an admin of this organization. Only admins can edit its settings and manage users.
     delete:
       need_to_be_admin: You need to be an administrator to destroy this organization
