Add due date to task comment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -718,6 +718,7 @@ en:
       due_on: Due on
       today: Today
       tomorrow: Tomorrow
+      undefined: No due date
     create: Add Task
     edit:
       submit: Update Task
@@ -1616,6 +1617,9 @@ en:
     strong: Strong
     too_long: Too long
 
+  date_picker:
+    no_date_assigned: No date assigned
+
   oauth:
     this_account_will_be_linked_to: "This account will be linked with %{provider}"
     account_linked: "Your account has been linked."
@@ -1637,4 +1641,3 @@ en:
     user_exists_instruction: If you already have a Teambox account, log in to link it automatically to your %{provider} profile.
     user_exists_is_not_yours: If you don't own the account '%{account}', %{signup_for_a_new_account}.
     signup_for_a_new_account: click here to sign up for a new account
-
