--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -578,6 +578,7 @@ en:
       invited_user: "%{inviter} invited <b>%{invitee}</b> to join the project."
       invited_email: "%{inviter} invited <b>%{email}</b> to join the project."
       time_ago: "(%{time_ago_in_words} ago)"
+      just_now: "(just now)"
       resend: Re-send invitation email
       pending: "An email was sent to this user, but they still haven't confirmed."
       discard: Discard invitation
