--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -452,6 +452,7 @@ en:
   organizations:
     column:
       general_settings: General settings
+      appearance: Appearance
       admin_users: Manage users
       admin_projects: Manage projects
       billing: Plans and Billing
@@ -464,6 +465,8 @@ en:
       submit: Save changes
       saved: Changes saved
       invalid: Invalid organization
+    appearance:
+      submit: Save changes
     external_view:
       create_your_own_org: "However, you can <a href='%{link}'>create your own organization</a> for your projects."
       request_permission: "To access this organization, you must request permission to some of the administrators:"
@@ -496,11 +499,18 @@ en:
         save_with_yearly_plans: <b>Save 20%</b>. You can also sign up for any plan yearly and <b>get two months free</b>.
         signup_links: "Sign up yearly for <a href='%{corporate}'>Corporate ($2990)</a>, <a href='%{pro}'>Pro ($990)</a>, <a href='%{basic}'>Basic ($290)</a> or <a href='%{personal}'>Personal ($120)</a>."
     fields:
-      logo: Logo <em>Ideally should be 134x36 pixels</em>
       name: "Organization name"
       name_placeholder: Your organization
       permalink: Short organization code <em>No spaces allowed. Will be used for the web address.</em>
       domain: "Domain <em>You can use your own domain for your organization, check the <a href='http://help.teambox.com/faqs/more-ways-to-access-teambox/custom-domain' title='How to use your own domain for your organization in Teambox'>documentation</a>.</em>"
+    appearance_fields:
+      colours: Site colors
+      logo: Logo <em>Ideally should be 134x36 pixels</em>
+      links_colour: default link color
+      highlight_colour: highlight color
+      link_hover_colour: default link hover color
+      text_colour: default text color
+      header_bar_colour: header bar color
       description: HTML to be displayed on the entrance page <a href="http://help.teambox.com/faqs/more-ways-to-access-teambox/customize-organizations">Learn how to use this</a>
     index:
       about:
