Correcting link to view s/conversation/task online

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1339,7 +1339,9 @@ en:
     notify:
       project: "Teambox Project:"
       view_this_converation_online: "You can %{converation} to answer and attach files."
+      view_this_task_online: "You can %{link} to comment and attach files."
       converation: view this conversation online
+      task_link: view this task online
       reply: "You can also reply to this email to post a reply in the conversation."
       task_commands: "Write #resolve, #reject or #hold on the top of your reply to change the task status. Write #%{username} to assign it to @%{username}, etc."
       are_watching: " are suscribed to this conversation, and will be notified of future replies."
