Pluralizing are_watching translation and adding equivalent for tasks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1344,7 +1344,12 @@ en:
       task_link: view this task online
       reply: "You can also reply to this email to post a reply in the conversation."
       task_commands: "Write #resolve, #reject or #hold on the top of your reply to change the task status. Write #%{username} to assign it to @%{username}, etc."
-      are_watching: " are suscribed to this conversation, and will be notified of future replies."
+      are_watching: 
+        one: " is suscribed to this conversation, and will be notified of future replies."
+        other: " are suscribed to this conversation, and will be notified of future replies."
+      are_watching_task: 
+        one: " is suscribed to this task, and will be notified of future replies."
+        other: " are suscribed to this task, and will be notified of future replies."
       stop_watching_link: "%{stop_watch} this thread to stop receiving email notifications."
       stop_watch: Stop watching
       notification_settings_link: "You can change your %{settings_link} for further emails."
