i18n for "full view" and "hide comments", for tasks

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -715,6 +715,9 @@ en:
       all: "All organizations"
 
   tasks:
+    task:
+      full_view: Full view
+      hide_comments: Hide comments
     my_tasks_listing:
       tasks: My Tasks
       back: "Back to the Overview"
