--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1407,7 +1407,7 @@ de:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%I:%M %p"
+      short: "%i:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: Anhang
