--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -1073,7 +1073,7 @@ it:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%I:%M %p"
+      short: "%i:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: Allegato
