--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1452,7 +1452,7 @@ pt-BR:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%I:%M %p"
+      short: "%i:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: Arquivos
