--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1729,9 +1729,11 @@ en:
     signup_for_a_new_account: click here to sign up for a new account
     
   google_docs:
-    authorization_required: In order to use google docs you must first authorize teambox to use your google account.
+    authorization_required: In order to use Google Docs you must first authorize Teambox to use your google account.
     authorize_link: Authorize Google Docs
     create_new: Create a New Blank Document
+    create: Create
+    creating: Creating...
     attach: Attach a Google Document
     search_placeholder: Search Google documents
     new_document_placeholder: New document title
