--- a/config/locales/sl.yml
+++ b/config/locales/sl.yml
@@ -1070,7 +1070,7 @@ sl:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
     pm: popoldne
   uploads: 
     comment_upload_link: Priponka
