--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -1549,7 +1549,7 @@ ca:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: Adjunto
