--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1657,7 +1657,7 @@ es:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: Adjunto
