--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1605,7 +1605,7 @@ fr:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%d %B, %Y %H:%M"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: "Fichier joint"
