--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1599,7 +1599,7 @@ ja:
     formats: 
       default: "%a, %d %b %Y %H:%M:%S %z"
       long: "%B %d, %Y %H:%M"
-      short: "%i:%M %p"
+      short: "%I:%M %p"
     pm: pm
   uploads: 
     comment_upload_link: 添付
