No more ugly big file icons in the activity feed. Using small file icons now.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,7 +52,8 @@ en:
     left_project: "You are no longer in this project"
   activities:
     create_upload:
-      title: "%{user} uploaded file %{file}"
+      title: "%{user} uploaded a file: %{file}"
+      title_with_page: "%{user} uploaded a file to %{page}:"
     create_conversation:
       create_conversation: started the conversation
       title: "%{user} started a conversation: %{conversation}"
